# ua_oncophenotype

./: .gitignore  README.md  databricks_requirements.txt  gen_requirement.sh  install_hooks.sh  pyproject.toml  requirements.txt  run_checks.py  rwd_llm_env.yml  rwd_v2.yml  setup.py  test_requirements.txt  ua_oncophenotype_env.yml
rwd_llm/: run_experiment.py
rwd_llm/chains/: __init__.py  ablation_test_chains.py  categorical_chain.py  categorical_routing_chain.py  chain_utils.py  chat_evidence_chain.py  consistency_chain.py  document_filter_chain.py  evidence_chain.py  evidence_chain_prompts.py  evidence_cot_chain.py  few_shot_chain.py  index_chain.py  map_documents.py  mapping_chain.py  mapping_from_traces.py  note_formatter_chain.py  patient_history_grounded_answer_chain.py  patient_history_grounded_answer_example_formatter.py  question_with_structured_output.py  retrieval_chain.py  self_inspection_chain.py  stop_chain.py  structured_summary.py  truncating_llm_chain.py
rwd_llm/data_loaders/: __init__.py  dataframe_loaders.py
rwd_llm/dtypes/: __init__.py  dtypes.py  dtypes_utils.py
rwd_llm/eval/: eval.py
rwd_llm/example_selectors/: __init__.py  example_selector_utils.py  index_example_knn_selector.py  input_example_selector.py  memory_example_selector.py
rwd_llm/experiment/: data_runners.py  experiment.py
rwd_llm/experiment_config/: __init__.py  component_registry.py  experiment_config.py  mlflow_experiment_config.py
rwd_llm/hooks/: __init__.py  file_hooks.py
scripts/: .flake8  .isort.cfg  .pylintrc  setup.env.sh
ua_oncophenotype/: run_experiment.py
(+175 files in other folders)
