[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwd_llm"
version = "0.0.1"
description = "LLM utilities for clinical NLP applications"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
]
authors = [
    { name = "Sid Kiblawi", email = "sidkiblawi@microsoft.com" },
    { name = "Sam Preston", email = "sam.preston@microsoft.com" },
    { name = "Robert Tinn" }
]
dependencies = [
    "hydra-core>=1.3",
    "chromadb==0.6.3",
    "langchain==0.3.18",
    "openai>=1.0",
    "tiktoken>0.3",
    "haikunator>=2.1",
    "mlflow>=2.6",
    "pandas",
    "scikit-learn"
]

[tool.setuptools.packages.find]
exclude = ["tests", "*.tests", "*.tests.*"]
